# Decker

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  README_zh.md  add submodule.sh  convert_utf8.py  third_lib_install.sh
assets/: CMakeLists.txt
assets/config/: file.json  render_graph.json  render_graph_gen.py  render_graph_init_flow.dot  render_graph_source.json  render_graph_source.python.json
assets/shaders/: basic_mesh.frag  build_glsl_to_spv.py  build_slang_to_spv.py  compile glsl to spv.py  gradient_color.comp  input_structures.slang  mesh.vert  mesh.vert.slang  mesh_pbr.frag  mesh_pbr.frag.slang  test.md  test.slang
assets/shaders/glsl/common/: basic_mesh.frag  basic_mesh.vert  debug_aabb.frag  debug_aabb.mesh  distortion.comp  gaussian_blur.comp  outline.frag  outline_extrude.vert  ui_gizmo_solid.mesh
assets/shaders/glsl/fluid/: mac_vector.frag  mac_vector.mesh  macgrid_points.frag  macgrid_points.mesh  pointcloud.frag  pointcloud.mesh  spring.frag  spring.mesh
assets/shaders/glsl/fuild/: pointcloud.frag
assets/shaders/spv/: gradient_color.comp.spv  mesh_pbr.frag.spv
assets/shaders/spv/fluid/: dis_output.txt  pointcloud.frag.spv  pointcloud.mesh.spv  spring.frag.spv  spring.mesh.spv
assets/shaders/spv/fuild/: pointcloud.mesh.spv
src/: CMakeLists.txt  convert_encode_tool.py  convert_encode_tool_v3.py  encode_convert_v2.ps1  encoding_convert.ps1
src/asset/: AssetDB.cpp  AssetDB.h  AssetHelpers.hpp  AssetMeta.hpp  AssetNode.hpp  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  MeshLoaderFlex.cpp  MeshLoaderFlex.h  Prefab.hpp  RawTypes.hpp  ResourceCache.cpp  ResourceCache.h  ResourceLoader.cpp  ResourceLoader.h  TextureLoader.cpp  TextureLoader.h
src/asset/importer/: GLTF_Importer.cpp  GLTF_Importer.h  Importer.h
src/core/: AssetDB.cpp  AssetDB.h  Macros.h  Object.cpp  Object.h  Transform.h  UUID.hpp  vk_base.h  vk_context.h  vk_debug_util.h  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
src/core/BVH/: AABB.hpp  Frustum.hpp  PLOC.hpp
src/core/Scene/: Bound.h  GLTF_Loader.h  Node.cpp  Node.h
src/core/Vulkan/: BaseBuilder.h  Buffer.cpp  Buffer.h  BufferBuilder.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Context.cpp  Context.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetPool.cpp  DescriptorSetPool.h  DescriptorWriter.h  Device.h  Image.cpp  Image.h  ImageBuilder.h  ImageView.cpp  ImageView.h  ImageViewBuilder.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  PipelineLayout.h  Resource.h  Resource.hpp  Sampler.cpp  Sampler.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderModule.cpp  ShaderModule.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
src/core/Window/: SDLWindow.cpp  SDLWindow.h  Window.cpp  Window.h
src/core/input/: InputBackend.cpp  InputBackend.h  InputContext.h  InputRouter.cpp  InputRouter.h  InputState.cpp  InputState.h
src/core/render/: DrawList.h  GpuResourceCache.cpp  GpuResourceCache.h  RenderCulling.cpp  RenderCulling.h  RenderData.h  RenderWorld.cpp  RenderWorld.h
src/gpu/: CMakeLists.txt  CameraInputController.cpp  CameraInputController.h  camera.cpp  camera.h  meshes.h  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vma_imp.cpp
src/gpu/render/: MACVectorRender.cpp  MACVectorRender.h  MacGridPointRender.cpp  MacGridPointRender.h  MacGridVectorRenderer.cpp  MacGridVectorRenderer.h  PointCloudRender.cpp  PointCloudRender.h  SpringRender.cpp  SpringRender.h
src/gpu/render graph/: BuiltinPassRegistry.cpp  BuiltinPassRegistry.h  GraphAsset.h  GraphAssetBuilder.cpp  GraphAssetBuilder.h  GraphAssetIO.cpp  GraphAssetIO.h  GraphAssetViz.cpp  GraphAssetViz.h  GraphCompiler.cpp  GraphCompiler.h  PassRegistry.cpp  PassRegistry.h  PassRegistryJson.cpp  PassRegistryJson.h  RenderGraph.cpp  RenderGraph.h  RenderTask.h  RenderTaskBuilder.cpp  RenderTaskBuilder.h  Resource.h  ResourceBuffer.cpp  ResourceBuffer.h  ResourceTexture.cpp  ResourceTexture.h
src/gpu/render graph/renderpass/: BlitPass.cpp  BlitPass.h  DebugAabbPass.cpp  DebugAabbPass.h  DistortionPass.cpp  (+13 more)
src/io/: AssimpLoader.cpp  AssimpLoader.h  MeshConverter.cpp  MeshConverter.h
src/main/: main.cpp
src/math/: Interpolation.h
src/physics/: Base.h  Generator.h  MassSpring.cpp  MassSpring.h  World.cpp  World.h  integrators.h  neighbor_grid.cpp  neighbor_grid.h
src/physics/collider/: ICollider.h  PlaneCollider.h
src/physics/color/: FixedColorizer.h  IParticleColorizer.h  UniformColorizer.h
src/physics/data/: MACGrid.cpp  MACGrid.h  MACInit.cpp  MACInit.h  Particle.h  SpatialGrid.h
src/physics/fluid/: FluidSystem.cpp  FluidSystem.h
src/physics/force/: DampingForce.h  GravityForce.h  IForce.h  SpringForce.h
src/physics/solver/: EulerSolver.cpp  EulerSolver.h  ISolver.h  PBDSolver.cpp  PBDSolver.h  StableFliuidsSolver.cpp  StableFliuidsSolver.h  VerletSolver.cpp  VerletSolver.h
src/physics/sph/: kernal.h  sph.h
src/runtime/python/: RenderGraphPythonBindings.cpp
src/runtime/render/: DebugRenderService.cpp  DebugRenderService.h  DrawList.h  RenderSystem.cpp  RenderSystem.h  RenderTypes.cpp  RenderTypes.h  RenderWorld.cpp  RenderWorld.h  SimulationRenderData.h  UiRenderService.cpp  UiRenderService.h
src/scene/: Scene.cpp  Scene.h  SceneTypes.h
src/tests/: FluidSystemTests.cpp
src/tool/: ray.h
src/ui/: ControlPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  RenderGraphEditorPanel.cpp  RenderGraphEditorPanel.h
src/ui/gizmo/: GizmoContext.h  GizmoDragState.h  GizmoManager.cpp  GizmoManager.h  IGizmo.h  RotateGizmo.cpp  RotateGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h
src/ui/tools/: ITool.h  RotateTool.cpp  RotateTool.h  ToolContext.h  ToolManager.cpp  ToolManager.h  ToolTypes.h  TranslateTool.cpp  TranslateTool.h
src/util/: SlangCompiler.cpp  SlangCompiler.h  general.hpp  loader.cpp  loader.h
third_lib/: CMakeLists.txt
third_lib/slang/cmake/: slangConfigVersion.cmake
third_lib/slang/include/: slang-tag-version.h
(+19 files in other folders)
